[BUGFIX] Respect aspect ratio for thumbnails in content preview
The thumbnails in the content preview were previously displayed in
a square format, which did not correspond to the aspect ratio of the
image and also led to a distorted display.

The patch corrects the distorted display and ensures that the preview
images are displayed with their correct aspect ratio. The display of
the preview images has also been modernized somewhat by aligning it
with the tile view of the file list.

Resolves: #105845
Releases: main, 13.4
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/87569
Tested-by: core-ci <typo3@b13.com>
Tested-by: Jasmina Ließmann <minapokhalo+typo3@gmail.com>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -4116,10 +4116,9 @@ td.permission-column-group{padding-inline-start:0;width:200px;white-space:nowrap
 .element-preview-content>:first-child{margin-top:0}
 .element-preview-content>:last-child{margin-bottom:0}
 .element-preview-content .preview-thumbnails{margin-top:.5rem}
-:root{--preview-thumbnails-size:64px}
-.preview-thumbnails{display:flex;flex-wrap:wrap;gap:.5rem}
-.preview-thumbnails-element{display:block}
-.preview-thumbnails-element-image{height:var(--preview-thumbnails-size);width:var(--preview-thumbnails-size);display:flex;background-color:rgba(0,0,0,.05);overflow:hidden;border-radius:2px;justify-content:center;align-items:center}
+.preview-thumbnails{--preview-thumbnails-element-bg:var(--typo3-surface-bright);--preview-thumbnails-element-border-color:color-mix(in srgb, var(--preview-thumbnails-element-bg), currentColor 15%);--preview-thumbnails-element-border-radius:var(--typo3-component-border-radius);--preview-thumbnails-element-spacing:.5rem;--preview-thumbnails-size:64px;display:flex;flex-wrap:wrap;gap:.5rem}
+.preview-thumbnails-element{background-color:var(--preview-thumbnails-element-bg);border:1px solid var(--preview-thumbnails-element-border-color);border-radius:var(--preview-thumbnails-element-border-radius);display:block;padding:var(--preview-thumbnails-element-spacing)}
+.preview-thumbnails-element-image{height:var(--preview-thumbnails-size);width:var(--preview-thumbnails-size);display:flex;overflow:hidden;justify-content:center;align-items:center}
 .preview-thumbnails-element-image .icon{height:calc(var(--preview-thumbnails-size)/ 2);width:calc(var(--preview-thumbnails-size)/ 2)}
 .t3-page-ce-dragitem .t3-page-ce-header-draggable:hover{cursor:move}
 .tx_recycler_recycler tr.collapse{display:none}
